--- a/templates/code.html
+++ b/templates/code.html
@@ -22,6 +22,7 @@
         <a href="./code.html" class="navOptions hvr-grow">Coding</a>
         <a href="./gaming.html" class="navOptions hvr-grow">Gaming</a>
         <a href="./anime.html" class="navOptions hvr-grow">Anime</a>
+        <a href="./lightbulb.html" class="navOptions hvr-grow">Lightbulb</a>
       </nav>
     </header>
   </div>
