--- a/templates/anime.html
+++ b/templates/anime.html
@@ -22,6 +22,7 @@
         <a href="./code.html" class="navOptions hvr-grow">Coding</a>
         <a href="./gaming.html" class="navOptions hvr-grow">Gaming</a>
         <a href="./anime.html" class="navOptions hvr-grow">Anime</a>
+        <a href="./lightbulb.html" class="navOptions hvr-grow">Lightbulb</a>
       </nav>
     </header>
   </div>
@@ -30,7 +31,7 @@
 
     <h1 class="pageTitles">Anime</h1>
     <p class="aboutMeP">I love anime that involves a lot of fighting. Typically one where the main character is over powered and just wrecks everyone. When I was younger I was always in love with the Marvel and DC universe and still am today. But anime has provided me with a lot more fighting shows.</p>
-    <img class="centerImg" src="https://initiate.alphacoders.com/download/avatar/46807/png" width="200"/>
+    <img class="centerImg" src="https://initiate.alphacoders.com/download/avatar/46807/png"/>
   </dv>
 
   <script src="../js/script.js"></script>
