--- a/templates/lightbulb.html
+++ b/templates/lightbulb.html
@@ -5,6 +5,7 @@
   <!-- CSS -->
   <link rel="icon" type="image/png" href="http://www.favicon.cc/logo3d/168257.png"/>
   <link rel="stylesheet" type="text/css" href="../css/styles.css"/>
+  <link rel="stylesheet" type="text/css" href="../css/style.css"/>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"/>
   <link rel="stylesheet" type="text/css" href="../css/hover-min.css"/>
   <link rel="stylesheet" type="text/css" href="../css/magic.min.css"/>
@@ -29,9 +30,14 @@
 
   <div class="navInfo">
 
-    <h1 class="pageTitles">Gaming</h1>
-    <p class="aboutMeP">Gaming has been a huge part of my life since pre-school. Though gaming has damaged my early academic career I still think it's safe to say that it's allowed me to decide on what I wanted to become when I got older. Gaming has thought me how to do a lot of things, much of it indirective. But a lot of it special. Such as creating my minecraft server via my IP address and learning how to pirate and use programs...shhh don't call the cops on me please.</p>
-    <img class="centerImg" src="http://static1.squarespace.com/static/564b6866e4b0c5929314d76f/564b7f22e4b0669335632d8b/57eae4e115d5dbca6f493d4d/1475011936258/Minecraft+Club.png?format=1000w" width="300"/>
+    <h1 class="pageTitles">Lightbulb</h1>
+
+    <div id="lightDiv">
+      <img class="animated slideInRight" id="lightBulb" src="../images/lightOff.png" />
+      <br/>
+      <img class="animated slideInLeft" id="lightSwitch" src="../images/offswitch.png"/>
+    </div>
+
   </dv>
 
   <script src="../js/script.js"></script>
