added entrepeneur and blog

--- a/templates/code.html
+++ b/templates/code.html
@@ -23,6 +23,8 @@
         <a href="./gaming.html" class="navOptions hvr-grow">Gaming</a>
         <a href="./anime.html" class="navOptions hvr-grow">Anime</a>
         <a href="./lightbulb.html" class="navOptions hvr-grow">Lightbulb</a>
+        <a href="./blog.html" class="navOptions hvr-grow">Blog</a>
+        <a href="./entrepreneur.html" class="navOptions hvr-grow">Entrepreneur</a>
       </nav>
     </header>
   </div>
