--- a/templates/blog.html
+++ b/templates/blog.html
@@ -31,9 +31,11 @@
 
   <div class="navInfo">
 
-    <h1 class="pageTitles">Anime</h1>
-    <p class="aboutMeP">I love anime that involves a lot of fighting. Typically one where the main character is over powered and just wrecks everyone. When I was younger I was always in love with the Marvel and DC universe and still am today. But anime has provided me with a lot more fighting shows.</p>
-    <img class="centerImg" src="https://initiate.alphacoders.com/download/avatar/46807/png"/>
+    <h1 class="pageTitles">Blog</h1>
+
+    <p class="aboutMeP">6/13/17<br/>Today as I was taking the surveys I almost forgot the 10-20-30 rule about presenting using powerpoints. It's suprising that I forgot it but that just tells me that I need to go over my notes more.</p>
+
+
   </dv>
 
   <script src="../js/script.js"></script>
