--- a/templates/entrepreneur.html
+++ b/templates/entrepreneur.html
@@ -31,9 +31,10 @@
 
   <div class="navInfo">
 
-    <h1 class="pageTitles">Anime</h1>
-    <p class="aboutMeP">I love anime that involves a lot of fighting. Typically one where the main character is over powered and just wrecks everyone. When I was younger I was always in love with the Marvel and DC universe and still am today. But anime has provided me with a lot more fighting shows.</p>
-    <img class="centerImg" src="https://initiate.alphacoders.com/download/avatar/46807/png"/>
+    <h1 class="pageTitles">Masahiko Yamada</h1>
+    <img src="http://www.eleventel.es/wp-content/uploads/2014/02/masahiko-yamada-wacom.jpg" height="300" style="display:block; margin: auto;">
+    <p class="aboutMeP">As the founder of the japanese company called Wacom. Masahiko Yamada paved the way for digital art in the tech industry. Back in the 1980s computers where see as just a piece of hardware for you to do work and have no creativity. But with the creation of the Wacom pens Masahiko proved otherwise. By creating a device that used a computer, which could in turn create artwork that was absolutetly amazing and shook the tech industry.</p>
+
   </dv>
 
   <script src="../js/script.js"></script>
