--- a/templates/lightbulb.html
+++ b/templates/lightbulb.html
@@ -24,6 +24,8 @@
         <a href="./gaming.html" class="navOptions hvr-grow">Gaming</a>
         <a href="./anime.html" class="navOptions hvr-grow">Anime</a>
         <a href="./lightbulb.html" class="navOptions hvr-grow">Lightbulb</a>
+        <a href="./blog.html" class="navOptions hvr-grow">Blog</a>
+        <a href="./entrepreneur.html" class="navOptions hvr-grow">Entrepreneur</a>
       </nav>
     </header>
   </div>
@@ -35,7 +37,7 @@
     <div id="lightDiv">
       <img class="animated slideInRight" id="lightBulb" src="../images/lightOff.png" />
       <br/>
-      <img class="animated slideInLeft" id="lightSwitch" src="../images/offswitch.png"/>
+      <img class="animated slideInLeft" id="lightSwitch" src="../images/offSwitch.png"/>
     </div>
 
   </dv>
