added blog entry

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -35,6 +35,16 @@
 
     <p class="aboutMeP">6/13/17<br/>Today as I was taking the surveys I almost forgot the 10-20-30 rule about presenting using powerpoints. It's suprising that I forgot it but that just tells me that I need to go over my notes more.</p>
 
+    <p class="aboutMeP">6/14/17<br/>Today is the first day of camp. I'm worried about how we'll sleep at night seeing how we're pretty much outside. The matresses look kinda dirty but I have my sleeping bag so no worries. Walking with Kevin was pretty interesting learning about what pushes him too learn new things was in a degree inspiring. I know his dreams need more tuning but I hope this program can help with that.</p>
+
+    <p class="aboutMeP">6/15/17<br/>Last night was extremely cold. I wore 2 socks and 2 pants just to stay warm while asleep. Also the bugs annoyed me a lot. I tried to take a show but I simply couldn't find one. The sleep I got was pretty bad. Hopefully tomorrow I'll be able to sleep easier. Playing the knot game was pretty stress full because no one would listen to the advice I would give them. But in the end they finally listened and so we finished the knot game with ease.</p>
+
+    <p class="aboutMeP">6/16/17<br/>Starting the lava game was pretty interesting. We weren't able to complete it today but I know for sure that by tomorrow we'll be able to complete it.</p>
+
+    <p class="aboutMeP">6/17/17<br/>As an Elite-Seal and being in the Lava game. I think it's safe to say that it was the equivelant to eating my own hair. None of the people in my group would listen to my advice and they would contantly repeat the same errors in some way or another. If the lils just listened to their fellow txters and coaches then we wouldn't have finished the game so late. But the thing in the end is that we actually got to finish the game. I hope that the lils can learning from this game. Also the sticks game was pretty quick in my opinion. I don't know if it was because I was sleepy but it just finished pretty quickly.</p>
+
+    <p class="aboutMeP">6/18/17<br/>As everyone was getting their shirts it was pretty emotional. It was as though we were graduating from txt but the reality was that txt was only starting to begin. But if I'm going to be honest with my self, camp was pretty hard when it came to the physical aspect of it. I would never want to go back to a place like that. I prefer living in the city where I have a warm bed and an indoor shower.</p>
+
 
   </dv>
 
