updated le journal

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -33,6 +33,7 @@
 
     <h1 class="pageTitles">Blog</h1>
 
+    <div id="journalDiv">
     <p class="aboutMeP">6/13/17<br/>Today as I was taking the surveys I almost forgot the 10-20-30 rule about presenting using powerpoints. It's suprising that I forgot it but that just tells me that I need to go over my notes more.</p>
 
     <p class="aboutMeP">6/14/17<br/>Today is the first day of camp. I'm worried about how we'll sleep at night seeing how we're pretty much outside. The matresses look kinda dirty but I have my sleeping bag so no worries. Walking with Kevin was pretty interesting learning about what pushes him too learn new things was in a degree inspiring. I know his dreams need more tuning but I hope this program can help with that.</p>
@@ -43,10 +44,25 @@
 
     <p class="aboutMeP">6/17/17<br/>As an Elite-Seal and being in the Lava game. I think it's safe to say that it was the equivelant to eating my own hair. None of the people in my group would listen to my advice and they would contantly repeat the same errors in some way or another. If the lils just listened to their fellow txters and coaches then we wouldn't have finished the game so late. But the thing in the end is that we actually got to finish the game. I hope that the lils can learning from this game. Also the sticks game was pretty quick in my opinion. I don't know if it was because I was sleepy but it just finished pretty quickly.</p>
 
-    <p class="aboutMeP">6/18/17<br/>As everyone was getting their shirts it was pretty emotional. It was as though we were graduating from txt but the reality was that txt was only starting to begin. But if I'm going to be honest with my self, camp was pretty hard when it came to the physical aspect of it. I would never want to go back to a place like that. I prefer living in the city where I have a warm bed and an indoor shower.</p>
+    <p class="aboutMeP">6/18/17<br/>Coming back from camp I'm feeling pretty lazy right now. All I'm gonna do today is sleep and watch anime. I'll be productive tomorrow.</p>
+
+    <p class="aboutMeP">6/19/17<br/>As I'm checking out Angular 2 it seems pretty intimidating. I hope that buy jumping in and learing the framework I'll be more cofident in my ability of using angular2.</p>
+
+    <p class="aboutMeP">6/20/17<br/>Funny thing just happened right now, So as I was installing angular 2 I ended up installing Angular 4. So now it looks like I'll be learning angular 4. I know I was told to learn angular 2 but why not learn angular 4? It looks a little easier than angular 2 anyways :/.</p>
+
+    <p class="aboutMeP">6/21/17<br/>In angular when defining a selector I learned that it doesnt have to be an element. It can be an attribute, class, or Id! I learned that when outputting data you can use the follow 2 techniques. String Interpolation - {{data}} and Property Binding - [property]="data". When you want to react to a user's click or anything the user interacts with you can use Event Binding - (event)="expression". A combination of both property binding and event binding is known as TWO-WAY-BINDING - [(ngmodel)]="data". Also in typescript when creating a variable your able to define what data type it is...reminds me of C++. You can do this by typing - varname : (number,string, etc.). Also I ran into the word "string interpolation" I think it means converting a data type to a string. I'll look more in depth to clarify.</p>
+
+    <p class="aboutMeP">6/22/17<br/>In string interpolation you can also intergrate functions like so - {{functionMyFunction()}}. Also I learned that you can actually disable html buttons using the 'disabled' attribute. A long with that I learned about the  ES6 arrow function [() => {}]. I always saw it in other people's js files but never understand it. Basicly all it does is intergrates the 'this' value into a function making writing out a function in some cases shorter and easier to write. Property binding in angular goes inside of html elements. [disabled]="!allowNewServer" the way that works is the element that has the disabled property will only have it enabled if the value "allowNewServer" is not false. I also learned that atom lags on these acers for no reason :slightly_smiling_face: (all other programs run well, atom is just being a butt)</p>
+
+    <p class="aboutMeP">6/23/17<br/>Atom wasn't working so today I didn't focuse on angular. For now I'll be looking a little bit into machine learning using pytthon. The method in which I trying to do machine learning was with linear regression. It's basicly just trying to draw a line that will pass through the most points on a coordinate plane.. I found a cool site https://www.quandl.com/ that allows you too use data for almost anything in your python,R,Excel, and other projects. I'm planning on using this site for my points in a coordinate plane I'll be making. As of right now though, learned how to create columns that display the data taken from Quandl. Other than that the majority of my day consisted of trying to fix atom. I learned that you can record profiles of cpu activity and then save the report as an actual file. The report has a .cpuprofile extension. When looking at the report I noticed that peg@parseTEXT seems to be what's congesting my cpu. Also when I open task manager for some reason I see a bunch of atom processes which is weird but I might have to do something with me having multiple files opened.</p>
+
+    <p class="aboutMeP">6/24/17<br/>So today I learned that you can put methods in string interpolation and not just variables. Square brackets in angular indicated property binding. Also ng-click has been replaced with (click). Essentially anything with ng-(x) has been turned into [x]. I also learned how to use *ngIf which allows someone to set a value to it and if that value/property is true then the element in which *ngIf is under will show. I also looked into classes in typescript, it's a bit confusing but once I start implementing it into my projects It should be easy to figure out.</p>
+  </div>
 
 
-  </dv>
+
+
+  </div>
 
   <script src="../js/script.js"></script>
 </body>
