--- a/css/styles.css
+++ b/css/styles.css
@@ -104,15 +104,23 @@ nav{
   font-size: 20px;
 }
 
+#journalDiv{
+  border: 1px;
+  border-radius: 25px;
+  background-color: #fff;
+  margin-bottom: 40px;
+}
+
 .aboutMeP{
-  color: #fff;
+  color: black;
   padding-top: 10px;
   text-align: center;
   display: block;
   margin: auto;
   width: 500px;
   font-size: 20px;
-  text-shadow: 0px 0px 10px black;
+  padding-bottom: 10px;
+
 }
 
 
