--- a/templates/lightbulb.html
+++ b/templates/lightbulb.html
@@ -39,10 +39,19 @@
       <br/>
       <img class="animated slideInLeft" id="lightSwitch" src="../images/offSwitch.png"/>
     </div>
+    <!-- Wand Image -->
+    <img id="wandImage" src="http://www.graphicsfuel.com/wp-content/uploads/2012/11/magic-wand-icon-512.png" />
 
-  </dv>
 
+  </div>
+
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
   <script src="../js/script.js"></script>
+
+
 </body>
 
 </html>
