--- a/templates/lightbulb.html
+++ b/templates/lightbulb.html
@@ -35,11 +35,15 @@
     <div id="lightDiv">
       <img class="animated slideInRight" id="lightBulb" src="../images/lightOff.png" />
       <br/>
-      <img class="animated slideInLeft" id="lightSwitch" src="../images/offswitch.png"/>
+      <img class="animated slideInLeft" id="lightSwitch" src="../images/offSwitch.png"/>
     </div>
 
-  </dv>
+  </div>
 
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
   <script src="../js/script.js"></script>
 </body>
 
