--- a/templates/lightbulb.html
+++ b/templates/lightbulb.html
@@ -36,13 +36,14 @@
       <img class="animated slideInRight" id="lightBulb" src="../images/lightOff.png" />
       <br/>
       <img class="animated slideInLeft" id="lightSwitch" src="../images/offSwitch.png"/>
+
+      <img id="wandImage" src="../images/wand.png" width="200" />
     </div>
 
   </div>
 
-  <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+<script
+  src="https://code.jquery.com/jquery-3.2.1.js"
   crossorigin="anonymous"></script>
   <script src="../js/script.js"></script>
 </body>
